fix text align

--- a/css/talk.css
+++ b/css/talk.css
@@ -39,7 +39,8 @@
     height:100px;
 }
 .music-pic p{
-    margin:-bottom:10px;
+    margin-bottom:10px;
+    text-align: left;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
